fix(front): colspan issue on safari/firefox

--- a/front/src/components/ReservationPanel/ReservationPanel.less
+++ b/front/src/components/ReservationPanel/ReservationPanel.less
@@ -32,6 +32,7 @@
     border-collapse: separate;
     border-spacing: 12px;
     width: 2500px;
+    table-layout: fixed;
     &-row {
 
         &-header {
